Mon Nov  7 13:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/boost_prg_exec_monitor.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_unit_test_framework.mpb:
          Added borland

Fri Oct 28 14:58:59 2005  William Otte  <wotte@dre.vanderbilt.edu>

        * config/global.features
        * config/xerces.mpb

	Added a xerces feature to the xerces base project, similar to
	boost/zlib/zzip to allow disabling xerces specific projects.

Fri Oct 28 11:43:52 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/swig_perl.mpb:

          Added $(PERL5_INCLUDE) to the 'libpaths' as well as the 'includes'.

        * templates/vc8.mpd:

          Corrected two instances of subdir_output which only show up if you
          set the template variable 'pdbc'.

Sun Oct 23 08:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd:
          Generate also includes for the resource compiler

Wed Oct 19 10:06:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/boost_date_time.mpb:
        * config/boost_filesystem.mpb:
        * config/boost_prg_exec_monitor.mpb:
        * config/boost_regex.mpb:
        * config/boost_signals.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_thread.mpb:
        * config/boost_unit_test_framework.mpb:

          Added a $(BOOST_STATIC_LIB_PREFIX) to the library name for all
          boost libraries.  For some reason, they insist on prepend 'lib' to
          the name of all static libraries on Windows.  For
          unit_test_framework, prg_exec_monitor and test_exec_monitor, 'lib'
          is always prepended on Windows since these are currently always
          static.  Thanks to Kevin Heifner for pointing this out.

Thu Oct 13 17:24:21 2005  Steve Huston  <shuston@riverace.com>

        * modules/VC8WorkspaceCreator.pm: Add the 3 magic bytes to the start