@@ -1,3 +1,12 @@
+Mon Nov  7 10:15:31 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Fixed a bug where a given custom input file does not match the
+          custom defined input extensions and no source files are
+          given, the generated source file name would still have the input
+          file extension in the name (with an escaped period).
+
 Mon Nov  7 13:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * config/boost_prg_exec_monitor.mpb:
@@ -10,8 +19,8 @@ Fri Oct 28 14:58:59 2005  William Otte  <wotte@dre.vanderbilt.edu>
         * config/global.features
         * config/xerces.mpb
 
-	Added a xerces feature to the xerces base project, similar to
-	boost/zlib/zzip to allow disabling xerces specific projects.
+        Added a xerces feature to the xerces base project, similar to
+        boost/zlib/zzip to allow disabling xerces specific projects.
 
 Fri Oct 28 11:43:52 2005  Chad Elliott  <elliott_c@ociweb.com>
 
